# armer_panda

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
armer_panda/: entry_point.py
armer_panda/robots/: PandaROSRobot.py  __init__.py
cfg/: controllers.yaml  panda_panda_sim.yaml  panda_real.yaml  panda_sim.yaml
launch/: franka_control.launch.xml  robot_bringup.launch
scripts/: panda-startup  set_defaults
