<?xml version="1.0"?>
<package format="2">
  <name>armer_panda</name>
  <version>0.2.0</version>
  <description>The ROS2 armer_panda package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dasun.gunasinghe@qut.edu.au">Dasun Gunasinghe</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD3</license>

  <!-- Added armer related dependencies -->
  <exec_depend>rclpy</exec_depend>
  <depend>armer</depend>
  <depend>armer_msgs</depend>
  <depend>armer_descriptions</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>franka_control</depend>
  <depend>ros_control</depend>
  <depend>velocity_controllers</depend>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Needed for ROS 2 -->
    <build_type>ament_python</build_type>
  </export>
</package>
